@@ -26,6 +26,7 @@ import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.lang.Dict;
 import cn.hutool.core.map.MapUtil;
 import cn.hutool.core.util.BooleanUtil;
+import cn.hutool.core.util.NumberUtil;
 import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.json.JSONObject;
@@ -37,6 +38,7 @@ import com.alibaba.excel.read.metadata.ReadSheet;
 import com.alibaba.excel.support.ExcelTypeEnum;
 import com.apitable.automation.entity.AutomationRobotEntity;
 import com.apitable.automation.model.AutomationCopyOptions;
+import com.apitable.automation.model.TriggerCopyResultDto;
 import com.apitable.automation.service.IAutomationRobotService;
 import com.apitable.base.enums.DatabaseException;
 import com.apitable.base.enums.ParameterException;
@@ -53,14 +55,14 @@ import com.apitable.integration.grpc.NodeCopyRo;
 import com.apitable.integration.grpc.NodeDeleteRo;
 import com.apitable.interfaces.ai.facade.AiServiceFacade;
 import com.apitable.interfaces.ai.model.AiCreateParam;
-import com.apitable.interfaces.ai.model.AiType;
 import com.apitable.interfaces.ai.model.AiUpdateParam;
 import com.apitable.interfaces.document.facade.DocumentServiceFacade;
-import com.apitable.interfaces.social.facade.SocialServiceFacade;
 import com.apitable.interfaces.social.model.SocialConnectInfo;
 import com.apitable.organization.dto.MemberDTO;
+import com.apitable.organization.enums.UnitType;
 import com.apitable.organization.mapper.MemberMapper;
 import com.apitable.organization.service.IMemberService;
+import com.apitable.organization.service.IUnitService;
 import com.apitable.shared.cache.bean.LoginUserDto;
 import com.apitable.shared.component.adapter.MultiDatasourceAdapterTemplate;
 import com.apitable.shared.constants.AuditConstants;
@@ -92,6 +94,7 @@ import com.apitable.workspace.dto.NodeCopyEffectDTO;
 import com.apitable.workspace.dto.NodeCopyOptions;
 import com.apitable.workspace.dto.NodeData;
 import com.apitable.workspace.dto.NodeExtraDTO;
+import com.apitable.workspace.dto.NodeStatisticsDTO;
 import com.apitable.workspace.dto.NodeTreeDTO;
 import com.apitable.workspace.dto.UrlNodeInfoDTO;
 import com.apitable.workspace.entity.DatasheetEntity;
@@ -104,6 +107,7 @@ import com.apitable.workspace.enums.NodeException;
 import com.apitable.workspace.enums.NodeType;
 import com.apitable.workspace.enums.PermissionException;
 import com.apitable.workspace.enums.ResourceType;
+import com.apitable.workspace.facade.NodeFacade;
 import com.apitable.workspace.listener.CsvReadListener;
 import com.apitable.workspace.listener.MultiSheetReadListener;
 import com.apitable.workspace.mapper.NodeMapper;
@@ -111,6 +115,7 @@ import com.apitable.workspace.mapper.NodeShareSettingMapper;
 import com.apitable.workspace.model.DatasheetCreateObject;
 import com.apitable.workspace.ro.CreateDatasheetRo;
 import com.apitable.workspace.ro.NodeCopyOpRo;
+import com.apitable.workspace.ro.NodeEmbedPageRo;
 import com.apitable.workspace.ro.NodeMoveOpRo;
 import com.apitable.workspace.ro.NodeOpRo;
 import com.apitable.workspace.ro.NodeRelRo;
@@ -139,6 +144,7 @@ import com.apitable.workspace.vo.ShowcaseVo.NodeExtra;
 import com.baomidou.mybatisplus.core.toolkit.IdWorker;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.baomidou.mybatisplus.extension.toolkit.SqlHelper;
+import jakarta.annotation.Resource;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -146,6 +152,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -154,8 +161,8 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
-import javax.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.integration.redis.util.RedisLockRegistry;
@@ -170,7 +177,7 @@ import org.springframework.transaction.annotation.Transactional;
 public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> implements INodeService {
 
     @Resource
-    private NodeMapper nodeMapper;
+    private NodeFacade nodeFacade;
 
     @Resource
     private INodeDescService iNodeDescService;
@@ -218,9 +225,6 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     private IGrpcClientService grpcClientService;
 
     @Resource
-    private SocialServiceFacade socialServiceFacade;
-
-    @Resource
     private RedisTemplate<String, String> redisTemplate;
 
     @Resource
@@ -250,16 +254,19 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Resource
     private DocumentServiceFacade documentServiceFacade;
 
+    @Resource
+    private IUnitService iUnitService;
+
     @Override
     public String getRootNodeIdBySpaceId(String spaceId) {
         log.info("The root node ID of the query space [{}]", spaceId);
-        return nodeMapper.selectRootNodeIdBySpaceId(spaceId);
+        return baseMapper.selectRootNodeIdBySpaceId(spaceId);
     }
 
     @Override
     public List<String> getNodeIdBySpaceIdAndType(String spaceId, Integer type) {
         log.info("The ID of the query space [{}] node type [{}]", spaceId, type);
-        return nodeMapper.selectNodeIdBySpaceIdAndType(spaceId, type);
+        return baseMapper.selectNodeIdBySpaceIdAndType(spaceId, type);
     }
 
     @Override
@@ -267,32 +274,36 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                                                             String keyword) {
         log.info("The ID of the query space [{}] node types [{}] keyword [{}]", spaceId, type,
             keyword);
-        return nodeMapper.selectNodeIdsBySpaceIdAndTypeAndKeyword(spaceId, type, keyword);
+        return baseMapper.selectNodeIdsBySpaceIdAndTypeAndKeyword(spaceId, type, keyword);
     }
 
     @Override
     public NodeType getTypeByNodeId(String nodeId) {
-        Integer type = nodeMapper.selectNodeTypeByNodeId(nodeId);
+        Integer type = baseMapper.selectNodeTypeByNodeId(nodeId);
         ExceptionUtil.isNotNull(type, PermissionException.NODE_NOT_EXIST);
         return NodeType.toEnum(type);
     }
 
     @Override
     public NodeEntity getByNodeId(String nodeId) {
-        log.info("Query node: {}", nodeId);
-        NodeEntity nodeEntity = nodeMapper.selectByNodeId(nodeId);
+        NodeEntity nodeEntity = baseMapper.selectByNodeId(nodeId);
         ExceptionUtil.isNotNull(nodeEntity, PermissionException.NODE_NOT_EXIST);
         return nodeEntity;
     }
 
     @Override
+    public List<NodeEntity> getSubNodeList(String parentId) {
+        return baseMapper.selectByParentId(parentId);
+    }
+
+    @Override
     public List<String> getExistNodeIdsBySelf(List<String> nodeIds) {
-        return nodeMapper.selectNodeIdByNodeIdIn(nodeIds);
+        return baseMapper.selectNodeIdByNodeIdIn(nodeIds);
     }
 
     private List<NodeEntity> getByNodeIds(Collection<String> nodeIds) {
         log.info("Batch query node:{}", nodeIds);
-        List<NodeEntity> nodeEntities = nodeMapper.selectByNodeIds(nodeIds);
+        List<NodeEntity> nodeEntities = baseMapper.selectByNodeIds(nodeIds);
         ExceptionUtil.isNotEmpty(nodeEntities, PermissionException.NODE_NOT_EXIST);
         return nodeEntities;
     }
@@ -300,14 +311,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getSpaceIdByNodeId(String nodeId) {
         log.info("The id of the space where the query node is located.");
-        String spaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
+        String spaceId = baseMapper.selectSpaceIdByNodeId(nodeId);
         ExceptionUtil.isNotNull(spaceId, PermissionException.NODE_NOT_EXIST);
         return spaceId;
     }
 
     @Override
     public String getSpaceIdByNodeIds(List<String> nodeIds) {
-        List<String> spaceIds = nodeMapper.selectSpaceIdsByNodeIds(nodeIds);
+        List<String> spaceIds = baseMapper.selectSpaceIdsByNodeIds(nodeIds);
         ExceptionUtil.isTrue(spaceIds.size() == 1, ParameterException.INCORRECT_ARG);
         return spaceIds.get(0);
     }
@@ -315,14 +326,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getSpaceIdByNodeIdIncludeDeleted(String nodeId) {
         log.info("Query the space ID of the node [{}] including deletion", nodeId);
-        return nodeMapper.selectSpaceIdByNodeIdIncludeDeleted(nodeId);
+        return baseMapper.selectSpaceIdByNodeIdIncludeDeleted(nodeId);
     }
 
     @Override
     public Boolean getIsTemplateByNodeIds(List<String> nodeIds) {
         log.info("Query whether all nodes [{}] belong to templates", nodeIds);
-        List<Boolean> result = nodeMapper.selectIsTemplateByNodeId(nodeIds);
-        ExceptionUtil.isTrue(result.size() > 0, PermissionException.NODE_NOT_EXIST);
+        List<Boolean> result = baseMapper.selectIsTemplateByNodeId(nodeIds);
+        ExceptionUtil.isTrue(!result.isEmpty(), PermissionException.NODE_NOT_EXIST);
         ExceptionUtil.isTrue(result.size() == 1, ParameterException.INCORRECT_ARG);
         return result.get(0);
     }
@@ -330,13 +341,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getParentIdByNodeId(String nodeId) {
         log.info("The id of the parent node of the query node [{}]", nodeId);
-        return nodeMapper.selectParentIdByNodeId(nodeId);
+        return baseMapper.selectParentIdByNodeId(nodeId);
     }
 
     @Override
     public String getNodeNameByNodeId(String nodeId) {
         log.info("Query the node name of node [{}]", nodeId);
-        return nodeMapper.selectNodeNameByNodeId(nodeId);
+        return baseMapper.selectNodeNameByNodeId(nodeId);
     }
 
     @Override
@@ -366,19 +377,19 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public List<NodeBaseInfoDTO> getParentPathNodes(List<String> nodeIds, boolean includeRootNode) {
-        return nodeMapper.selectAllParentNodeIds(nodeIds, includeRootNode);
+        return nodeFacade.getParentPathNodes(nodeIds, includeRootNode);
     }
 
     @Override
     public List<NodeInfo> getNodeInfo(String spaceId, List<String> nodeIds, Long memberId) {
         log.info("Node information view of batch query [{}]", nodeIds);
-        return nodeMapper.selectNodeInfo(nodeIds, memberId);
+        return baseMapper.selectNodeInfo(nodeIds, memberId);
     }
 
     @Override
     public List<NodeInfo> getNodeInfoByNodeIds(Collection<String> nodeIds) {
         log.info("Node information view of batch query [{}]", nodeIds);
-        return nodeMapper.selectInfoByNodeIds(nodeIds);
+        return baseMapper.selectInfoByNodeIds(nodeIds);
     }
 
     @Override
@@ -393,7 +404,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             return new ArrayList<>();
         }
         // Batch query node information
-        List<NodeInfoVo> infos = nodeMapper.selectNodeInfoByNodeIds(roleDict.keySet(), memberId);
+        List<NodeInfoVo> infos = baseMapper.selectNodeInfoByNodeIds(roleDict.keySet(), memberId);
         // Node switches to memory custom sorting
         CollectionUtil.customSequenceSort(infos, NodeInfoVo::getNodeId,
             new ArrayList<>(roleDict.keySet()));
@@ -405,16 +416,30 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String checkNodeIfExist(String spaceId, String nodeId) {
         log.info("Check if the node exists");
-        String nodeSpaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
-        ExceptionUtil.isNotNull(nodeSpaceId, PermissionException.NODE_NOT_EXIST);
-        // When the space id is not empty, check whether the space is cross-space.
-        ExceptionUtil.isTrue(StrUtil.isBlank(spaceId) || nodeSpaceId.equals(spaceId),
-            SpaceException.NOT_IN_SPACE);
-        return nodeSpaceId;
+        return checkNodeIfExist(spaceId, nodeId, null);
     }
 
     @Override
-    public void checkSourceDatasheet(String spaceId, Long memberId, Integer type, NodeRelRo extra) {
+    public String checkNodeIfExist(String spaceId, String nodeId, String unitId) {
+        log.info("Check if the node exists");
+        if (nodeId.equals(getRootNodeIdBySpaceId(spaceId))) {
+            return spaceId;
+        }
+        // validate not root node
+        NodeEntity node = baseMapper.selectSpaceIdAndUnitIdByNodeId(nodeId);
+        ExceptionUtil.isNotNull(node, PermissionException.NODE_NOT_EXIST);
+        ExceptionUtil.isFalse(
+            null != unitId && !node.getUnitId().equals(NumberUtil.parseLong(unitId)),
+            PermissionException.NODE_NOT_EXIST);
+        // When the space id is not empty, check whether the space is cross-space.
+        ExceptionUtil.isTrue(StrUtil.isBlank(spaceId) || node.getSpaceId().equals(spaceId),
+            SpaceException.NOT_IN_SPACE);
+        return node.getNodeId();
+    }
+
+    @Override
+    public void checkSourceDatasheet(String spaceId, Long memberId, Integer type, String unitId,
+                                     NodeRelRo extra) {
         NodeType nodeType = NodeType.toEnum(type);
         switch (nodeType) {
             case FORM:
@@ -422,7 +447,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 ExceptionUtil.isTrue(extra != null && StrUtil.isNotBlank(extra.getDatasheetId())
                     && StrUtil.isNotBlank(extra.getViewId()), ParameterException.INCORRECT_ARG);
                 // Determine whether the datasheet does not exist or is accessed across space.
-                this.checkNodeIfExist(spaceId, extra.getDatasheetId());
+                this.checkNodeIfExist(spaceId, extra.getDatasheetId(), unitId);
                 // Check whether the specified view of the datasheet exists.
                 iDatasheetMetaService.checkViewIfExist(extra.getDatasheetId(), extra.getViewId());
                 // The form requires the editable permission of the source datasheet and the
@@ -442,7 +467,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public Long getMemberIdByUserIdAndNodeId(Long userId, String nodeId) {
-        String spaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
+        String spaceId = baseMapper.selectSpaceIdByNodeId(nodeId);
         if (StrUtil.isBlank(spaceId)) {
             return null;
         }
@@ -456,8 +481,11 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (StrUtil.isBlank(StrUtil.trim(keyword))) {
             return new ArrayList<>();
         }
+        Long unitId = iUnitService.getUnitIdByRefId(memberId);
+        List<Long> unitIds = CollUtil.list(false, 0L, unitId);
         // fuzzy search results
-        List<String> nodeIds = nodeMapper.selectLikeNodeName(spaceId, StrUtil.trim(keyword));
+        List<String> nodeIds =
+            baseMapper.selectLikeNodeName(spaceId, unitIds, StrUtil.trim(keyword));
         List<NodeInfoVo> nodeInfos = this.getNodeInfoByNodeIds(spaceId, memberId, nodeIds);
         return formatNodeSearchResults(nodeInfos);
     }
@@ -465,9 +493,32 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public NodeInfoTreeVo getNodeTree(String spaceId, String nodeId, Long memberId, int depth) {
         log.info("Query node tree ");
-        List<String> nodeIds = this.getNodeIdsInNodeTree(nodeId, depth);
+        // filter private workspace
+        List<String> nodeIds =
+            this.getNodeIdsInNodeTree(nodeId, depth, false, Collections.singletonList(0L));
         return this.getNodeInfoTreeByNodeIds(spaceId, memberId, nodeIds);
     }
+
+    @Override
+    public NodeInfoTreeVo getNodeTree(String spaceId, String nodeId, Long memberId, int depth,
+                                      UnitType unitType) {
+        log.info("Query node tree ");
+        List<Long> unitIds = new ArrayList<>();
+        if (UnitType.MEMBER.equals(unitType)) {
+            unitIds.add(iUnitService.getUnitIdByRefId(memberId));
+        }
+        List<String> nodeIds = this.getNodeIdsInNodeTree(nodeId, depth, false, unitIds);
+        if (UnitType.MEMBER.equals(unitType)) {
+            // get space active member count
+            long memberCount = iMemberService.getTotalActiveMemberCountBySpaceId(spaceId);
+            // haven't private node
+            if (memberCount < 2 && nodeIds.size() == 1) {
+                return null;
+            }
+        }
+        return getNodeInfoTreeByNodeIds(spaceId, memberId, nodeIds);
+    }
+
 
     @Override
     public List<NodeShareTree> getSubNodes(String nodeId) {
@@ -476,7 +527,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (subNodeIds.isEmpty()) {
             return new ArrayList<>();
         }
-        List<NodeShareTree> shareTrees = nodeMapper.selectShareTree(subNodeIds);
+        List<NodeShareTree> shareTrees = baseMapper.selectShareTree(subNodeIds);
         // node switches to memory custom sort
         CollectionUtil.customSequenceSort(shareTrees, NodeShareTree::getNodeId, subNodeIds);
         return shareTrees;
@@ -484,23 +535,25 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public List<String> getNodeIdsInNodeTree(String nodeId, Integer depth) {
-        return this.getNodeIdsInNodeTree(nodeId, depth, false);
+        return this.getNodeIdsInNodeTree(nodeId, depth, false, new ArrayList<>());
     }
 
     @Override
-    public List<String> getNodeIdsInNodeTree(String nodeId, Integer depth, Boolean isRubbish) {
-        return this.getNodeIdsInNodeTree(Collections.singletonList(nodeId), depth, isRubbish);
+    public List<String> getNodeIdsInNodeTree(String nodeId, Integer depth, Boolean isRubbish,
+                                             List<Long> unitIds) {
+        return this.getNodeIdsInNodeTree(Collections.singletonList(nodeId), depth, isRubbish,
+            unitIds);
     }
 
     private List<String> getNodeIdsInNodeTree(List<String> nodeIds, Integer depth,
-                                              Boolean isRubbish) {
+                                              Boolean isRubbish, List<Long> unitIds) {
         Set<String> nodeIdSet = new LinkedHashSet<>(nodeIds);
         List<String> parentIds = nodeIds.stream()
             .filter(i -> i.startsWith(IdRulePrefixEnum.FOD.getIdRulePrefixEnum()))
             .collect(Collectors.toList());
         while (!parentIds.isEmpty() && depth != 0) {
             List<NodeTreeDTO> subNode =
-                nodeMapper.selectNodeTreeDTOByParentIdIn(parentIds, isRubbish);
+                baseMapper.selectNodeTreeDTOByParentIdIn(parentIds, isRubbish, unitIds);
             if (subNode.isEmpty()) {
                 break;
             }
@@ -525,44 +578,56 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     private List<String> sortNodeAtSameLevel(List<NodeTreeDTO> sub, NodeType nodeType) {
-        List<String> subNodeIds =
-            sub.stream().map(NodeTreeDTO::getNodeId).collect(Collectors.toList());
-        List<NodeTreeDTO> nodes = new ArrayList<>();
-        Optional<NodeTreeDTO> first =
-            sub.stream().filter(i -> i.getPreNodeId() == null).findFirst();
-        first.ifPresent(nodes::add);
-        nodes.addAll(sub.stream()
-            .filter(i -> i.getPreNodeId() != null && !subNodeIds.contains(i.getPreNodeId()))
-            .collect(Collectors.toList()));
-        if (nodes.isEmpty()) {
-            return subNodeIds;
+        List<NodeTreeDTO> firstNodes = sub.stream()
+            .filter(i -> i.getPreNodeId() == null)
+            .collect(Collectors.toList());
+        Map<String, List<NodeTreeDTO>> preNodeIdToNodesMap = new LinkedHashMap<>();
+        for (NodeTreeDTO node : sub) {
+            String preNodeId = node.getPreNodeId();
+            List<NodeTreeDTO> sufNodes =
+                preNodeIdToNodesMap.computeIfAbsent(preNodeId, k -> new ArrayList<>());
+            sufNodes.add(node);
         }
         List<String> nodeIds = new ArrayList<>();
-        Map<String, NodeTreeDTO> preNodeIdToNodeMap = sub.stream()
-            .collect(Collectors.toMap(NodeTreeDTO::getPreNodeId, i -> i, (k1, k2) -> k2));
+        this.sufNodeRecurrence(firstNodes, nodeType, preNodeIdToNodesMap, nodeIds::add);
+        if (nodeIds.size() == sub.size()) {
+            return nodeIds;
+        }
+        List<String> subNodeIds = sub.stream().map(NodeTreeDTO::getNodeId).toList();
+        sub.stream()
+            .filter(i -> i.getPreNodeId() != null && !subNodeIds.contains(i.getPreNodeId()))
+            .forEach(node -> {
+                List<NodeTreeDTO> suffixNodes = Collections.singletonList(node);
+                this.sufNodeRecurrence(suffixNodes, nodeType, preNodeIdToNodesMap, nodeIds::add);
+            });
+        return nodeIds;
+    }
+
+    private void sufNodeRecurrence(List<NodeTreeDTO> nodes, NodeType nodeType,
+                                   Map<String, List<NodeTreeDTO>> preNodeIdToNodesMap,
+                                   Consumer<String> action) {
+        nodes.stream()
+            .filter(i -> nodeType == null || i.getType() == nodeType.getNodeType())
+            .map(NodeTreeDTO::getNodeId)
+            .forEach(action);
         for (NodeTreeDTO node : nodes) {
-            String preNodeId = node.getNodeId();
-            if (nodeType == null || node.getType() == nodeType.getNodeType()) {
-                nodeIds.add(preNodeId);
-            }
-            while (preNodeIdToNodeMap.containsKey(preNodeId)) {
-                NodeTreeDTO nodeTreeDTO = preNodeIdToNodeMap.get(preNodeId);
-                preNodeId = nodeTreeDTO.getNodeId();
-                if (nodeType == null || nodeTreeDTO.getType() == nodeType.getNodeType()) {
-                    nodeIds.add(preNodeId);
-                }
+            String nodeId = node.getNodeId();
+            if (preNodeIdToNodesMap.containsKey(nodeId)) {
+                List<NodeTreeDTO> sufNodes = preNodeIdToNodesMap.get(nodeId);
+                this.sufNodeRecurrence(sufNodes, nodeType, preNodeIdToNodesMap, action);
             }
         }
-        return nodeIds;
     }
 
     @Override
     public List<NodeInfoVo> getChildNodesByNodeId(String spaceId, Long memberId, String nodeId,
                                                   NodeType nodeType) {
+        List<Long> unitIds = CollUtil.newArrayList(0L, iUnitService.getUnitIdByRefId(memberId));
         log.info("Query the list of child nodes ");
         // Get a direct child node
         List<NodeTreeDTO> subNode =
-            nodeMapper.selectNodeTreeDTOByParentIdIn(Collections.singleton(nodeId), false);
+            baseMapper.selectNodeTreeDTOByParentIdIn(Collections.singleton(nodeId), false,
+                unitIds);
         if (subNode.isEmpty()) {
             return new ArrayList<>();
         }
@@ -594,9 +659,11 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         String rootNodeId = getRootNodeIdBySpaceId(spaceId);
         parentNodeIds.add(0, rootNodeId);
         parentNodeIds.remove(nodeId);
+        Long unitId = baseMapper.selectUnitIdByNodeId(nodeId);
         // The parent node supplements the tree node load.
         List<NodeTreeDTO> subNode =
-            nodeMapper.selectNodeTreeDTOByParentIdIn(parentNodeIds, false);
+            baseMapper.selectNodeTreeDTOByParentIdIn(parentNodeIds, false,
+                Collections.singletonList(unitId));
         Map<String, List<NodeTreeDTO>> parentIdToSubNodeMap =
             subNode.stream().collect(Collectors.groupingBy(NodeTreeDTO::getParentId));
         List<String> viewNodeIds = new ArrayList<>();
@@ -611,7 +678,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public NodeInfoVo getNodeInfoByNodeId(String spaceId, String nodeId, ControlRole role) {
         log.info("Query node information ");
-        NodeInfoVo nodeInfo = nodeMapper.selectNodeInfoByNodeId(nodeId);
+        NodeInfoVo nodeInfo = baseMapper.selectNodeInfoByNodeId(nodeId);
         SpaceGlobalFeature feature = iSpaceService.getSpaceGlobalFeature(spaceId);
         nodeInfo.setRole(role.getRoleTag());
         nodeInfo.setPermissions(role.permissionToBean(NodePermissionView.class, feature));
@@ -631,7 +698,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 .reduce(new ArrayList<>(),
                     (nodes, item) -> {
                         List<NodeInfoTreeVo> childNodes =
-                            nodeMapper.selectNodeInfoTreeByNodeIds(item, memberId);
+                            baseMapper.selectNodeInfoTreeByNodeIds(item, memberId);
                         nodes.addAll(childNodes);
                         return nodes;
                     },
@@ -661,7 +728,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public String createDatasheetNode(Long userId, String spaceId, DatasheetCreateObject object) {
-        String nodeId = IdUtil.createNodeId(object.getType().getNodeType());
+        String nodeId = IdUtil.createNodeId(object.getType());
         NodeEntity nodeEntity = NodeEntity.builder()
             .spaceId(spaceId)
             .parentId(object.getParentId())
@@ -691,11 +758,15 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         log.info("create children node");
         // The parent id and space id must match.
         // The parent node belongs to this space to prevent cross-space and cross-node operations.
-        this.checkNodeIfExist(spaceId, nodeOpRo.getParentId());
+        this.checkNodeIfExist(spaceId, nodeOpRo.getParentId(), nodeOpRo.getUnitId());
         String name =
             duplicateNameModify(nodeOpRo.getParentId(), nodeOpRo.getType(), nodeOpRo.getNodeName(),
-                null);
-        String nodeId = IdUtil.createNodeId(nodeOpRo.getType());
+                null, NumberUtil.parseLong(nodeOpRo.getUnitId()));
+        NodeType nodeType = NodeType.toEnum(nodeOpRo.getType());
+        if (!nodeType.isFolder()) {
+            iSpaceService.checkFileNumOverLimit(spaceId);
+        }
+        String nodeId = IdUtil.createNodeId(nodeType);
         // If the new node is a file, it corresponds to the creation of a datasheet form.
         this.createFileMeta(userId, spaceId, nodeId, nodeOpRo.getType(), name, nodeOpRo.getExtra());
         // When an empty string is not passed in,
@@ -707,10 +778,12 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             .preNodeId(preNodeId)
             .nodeName(name)
             .type(nodeOpRo.getType())
+            .extra(JSONUtil.toJsonStr(nodeOpRo.getExtra()))
             .nodeId(nodeId)
+            .unitId(NumberUtil.parseLong(nodeOpRo.getUnitId()))
             .build();
         // Change the front node ID of the next node to the new node ID(A <- C => B <- C)
-        nodeMapper.updatePreNodeIdBySelf(nodeId, preNodeId, nodeOpRo.getParentId());
+        baseMapper.updatePreNodeIdBySelf(nodeId, preNodeId, nodeOpRo.getParentId());
         boolean flag = save(nodeEntity);
         ExceptionUtil.isTrue(flag, DatabaseException.INSERT_ERROR);
         return nodeEntity.getNodeId();
@@ -747,6 +820,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             .extra(dto.getExtra())
             .createdBy(userId)
             .updatedBy(userId)
+            .unitId(dto.getUnitId())
             .build();
 
         boolean flag = save(nodeEntity);
@@ -768,7 +842,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             }
             // Verify that the number of nodes reaches the upper limit
             // iSubscriptionService.checkSheetNums(nodeList.get(0).getSpaceId(), dstCount);
-            boolean flag = SqlHelper.retBool(nodeMapper.insertBatch(nodeList));
+            boolean flag = SqlHelper.retBool(baseMapper.insertBatch(nodeList));
             ExceptionUtil.isTrue(flag, DatabaseException.INSERT_ERROR);
         }
     }
@@ -790,19 +864,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         this.updateNodeCover(userId, nodeId, opRo.getCover(), nodeEntity.getCover());
 
         // Modify whether to display the history of the record
-        if (ObjectUtil.isNotNull(opRo.getShowRecordHistory())
-            && nodeEntity.getType() == NodeType.DATASHEET.getNodeType()) {
-            boolean flag;
-            String newValue = JSONUtil.toJsonStr(Dict.create()
-                .set(NodeExtraConstants.SHOW_RECORD_HISTORY, opRo.getShowRecordHistory()));
-            if (ObjectUtil.isNotNull(nodeEntity.getExtra())) {
-                flag = SqlHelper.retBool(nodeMapper.updateExtraShowRecordHistoryByNodeId(nodeId,
-                    opRo.getShowRecordHistory()));
-            } else {
-                flag = SqlHelper.retBool(nodeMapper.updateExtraByNodeId(nodeId, newValue));
-            }
-            ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
-        }
+        this.updateExtra(nodeId, NodeType.toEnum(nodeEntity.getType()), nodeEntity.getExtra(),
+            opRo.getShowRecordHistory(), opRo.getEmbedPage());
     }
 
     private void updateNodeName(Long userId, String nodeId, String name, NodeEntity entity) {
@@ -810,8 +873,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             return;
         }
         // Prevent peer directory, duplicate name modification
-        String nodeName = duplicateNameModify(entity.getParentId(), entity.getType(), name, nodeId);
-        boolean flag = SqlHelper.retBool(nodeMapper.updateNameByNodeId(nodeId, nodeName));
+        String nodeName = duplicateNameModify(entity.getParentId(), entity.getType(), name, nodeId,
+            entity.getUnitId());
+        boolean flag = SqlHelper.retBool(baseMapper.updateNameByNodeId(nodeId, nodeName));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // Correspondingly modify the name.
         switch (NodeType.toEnum(entity.getType())) {
@@ -849,7 +913,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (icon.trim().equals(StrUtil.EMPTY)) {
             icon = StrUtil.EMPTY;
         }
-        boolean flag = SqlHelper.retBool(nodeMapper.updateIconByNodeId(nodeId, icon));
+        boolean flag = SqlHelper.retBool(baseMapper.updateIconByNodeId(nodeId, icon));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // publish space audit events
         JSONObject info = JSONUtil.createObj();
@@ -873,7 +937,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if ("null".equalsIgnoreCase(cover) || "undefined".equalsIgnoreCase(cover)) {
             cover = null;
         }
-        boolean flag = SqlHelper.retBool(nodeMapper.updateCoverByNodeId(nodeId, cover));
+        boolean flag = SqlHelper.retBool(baseMapper.updateCoverByNodeId(nodeId, cover));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // the old cover map reduces the number of references
         if (StrUtil.startWith(oldNodeCover, SPACE_PREFIX)) {
@@ -919,14 +983,15 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         String parentId = nodeEntity.getParentId();
         // Nodes that record changes in data (front-end requirements)
         List<String> nodeIds = CollUtil.newArrayList(nodeEntity.getNodeId());
-        if (!nodeEntity.getParentId().equals(opRo.getParentId())) {
+        if (!nodeEntity.getParentId().equals(opRo.getParentId())
+            || !nodeEntity.getUnitId().equals(NumberUtil.parseLong(opRo.getUnitId()))) {
             // move across folders
             parentId = opRo.getParentId();
             // Check whether the new parent node exists and is in the same space
-            this.checkNodeIfExist(nodeEntity.getSpaceId(), parentId);
+            this.checkNodeIfExist(nodeEntity.getSpaceId(), parentId, opRo.getUnitId());
             name =
                 this.duplicateNameModify(parentId, nodeEntity.getType(), nodeEntity.getNodeName(),
-                    null);
+                    null, NumberUtil.parseLong(opRo.getUnitId()));
             // The node is a datasheet, and the name changes corresponding to the modification.
             if (nodeEntity.getType() == NodeType.DATASHEET.getNodeType()
                 && !nodeEntity.getNodeName().equals(name)) {
@@ -949,7 +1014,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         // if the pre-node is deleted or not under the parent id, the move fails.
         String preNodeId = this.verifyPreNodeId(opRo.getPreNodeId(), parentId);
         // The next node that records the old and new locations
-        List<String> suffixNodeIds = nodeMapper.selectNodeIdByPreNodeIdIn(
+        List<String> suffixNodeIds = baseMapper.selectNodeIdByPreNodeIdIn(
             CollUtil.newArrayList(nodeEntity.getNodeId()));
         nodeIds.addAll(suffixNodeIds);
         Lock lock = redisLockRegistry.obtain(parentId);
@@ -957,19 +1022,21 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             if (lock.tryLock(2, TimeUnit.MINUTES)) {
                 // Update the front node of the latter node
                 // to the front node of the node (A <- X <- C => A <- C)
-                nodeMapper.updatePreNodeIdBySelf(nodeEntity.getPreNodeId(),
+                baseMapper.updatePreNodeIdBySelf(nodeEntity.getPreNodeId(),
                     nodeEntity.getNodeId(), nodeEntity.getParentId());
                 // Update the sequence relationship of nodes before
                 // and after the move (D <- E => D <- X <- E)
                 String sufNodeId =
-                    nodeMapper.selectNodeIdByParentIdAndPreNodeId(parentId, preNodeId);
+                    baseMapper.selectNodeIdByParentIdAndPreNodeIdAndUnitId(parentId, preNodeId,
+                        nodeEntity.getUnitId());
                 if (sufNodeId != null) {
                     nodeIds.add(sufNodeId);
-                    nodeMapper.updatePreNodeIdByNodeId(nodeEntity.getNodeId(), sufNodeId);
+                    baseMapper.updatePreNodeIdByNodeId(nodeEntity.getNodeId(), sufNodeId);
                 }
                 // Update the information of this node (the ID of the previous
                 // node may be updated to null, so update By id is not used)
-                nodeMapper.updateInfoByNodeId(nodeEntity.getNodeId(), parentId, preNodeId, name);
+                baseMapper.updateInfoByNodeId(nodeEntity.getNodeId(), parentId, preNodeId, name,
+                    NumberUtil.parseLong(opRo.getUnitId()));
             } else {
                 throw new BusinessException("Frequent operations");
             }
@@ -1012,7 +1079,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             new HashSet<>(idList));
         // Obtain the node ID and the corresponding datasheet ID set of the node
         // and its child descendants.
-        List<String> nodeIds = this.getNodeIdsInNodeTree(idList, -1, false);
+        List<String> nodeIds = this.getNodeIdsInNodeTree(idList, -1, false, new ArrayList<>());
         // delete all nodes and child descendants
         if (CollUtil.isNotEmpty(nodeIds)) {
             this.nodeDeleteChangeset(nodeIds);
@@ -1020,7 +1087,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             Collection<String> subNodeIds = CollUtil.disjunction(nodeIds, idList);
             if (!subNodeIds.isEmpty()) {
                 boolean flag =
-                    SqlHelper.retBool(nodeMapper.updateIsRubbishByNodeIdIn(userId,
+                    SqlHelper.retBool(baseMapper.updateIsRubbishByNodeIdIn(userId,
                         subNodeIds, true));
                 ExceptionUtil.isTrue(flag, DatabaseException.DELETE_ERROR);
             }
@@ -1042,12 +1109,12 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     // (Large datasheet processing takes a long time,
                     // node.getPreNodeId() may have changed,
                     // so updatePreNodeIdBySelf is not used directly)
-                    nodeMapper.updatePreNodeIdByJoinSelf(nodeId, node.getParentId());
+                    baseMapper.updatePreNodeIdByJoinSelf(nodeId, node.getParentId());
                     // Save the path of the deletion.
                     // Specify that the deleted node is attached to the parent node -1.
                     String delPath = MapUtil.isNotEmpty(parentIdToPathMap)
                         ? parentIdToPathMap.get(node.getParentId()) : null;
-                    nodeMapper.updateDeletedPathByNodeId(userId, nodeId, delPath);
+                    baseMapper.updateDeletedPathByNodeId(userId, nodeId, delPath);
                     // publish space audit events
                     ClientOriginInfo clientOriginInfo = InformationUtil
                         .getClientOriginInfoInCurrentHttpContext(true, false);
@@ -1082,7 +1149,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         }
         // delete node and datasheet information
         boolean flag =
-            SqlHelper.retBool(nodeMapper.updateIsRubbishByNodeIdIn(userId, nodeIds, true));
+            SqlHelper.retBool(baseMapper.updateIsRubbishByNodeIdIn(userId, nodeIds, true));
         ExceptionUtil.isTrue(flag, DatabaseException.DELETE_ERROR);
         iDatasheetService.updateIsDeletedStatus(userId, nodeIds, true);
         // delete the spatial attachment resource of the node
@@ -1108,20 +1175,22 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         String nodeName = StringUtil.format(I18nStringsUtil.t("default_file_copy"), param);
 
         String name =
-            duplicateNameModify(copyNode.getParentId(), copyNode.getType(), nodeName, null);
+            duplicateNameModify(copyNode.getParentId(), copyNode.getType(), nodeName, null,
+                copyNode.getUnitId());
         CreateNodeDto createNodeDto = CreateNodeDto.builder()
             .spaceId(copyNode.getSpaceId())
             .parentId(copyNode.getParentId())
             .nodeName(name)
             .type(copyNode.getType())
             .preNodeId(opRo.getNodeId())
-            .newNodeId(IdUtil.createNodeId(copyNode.getType()))
+            .newNodeId(IdUtil.createNodeId(nodeType))
             .icon(copyNode.getIcon())
             .cover(copyNode.getCover())
             .extra(copyNode.getExtra())
+            .unitId(copyNode.getUnitId())
             .build();
         // Update the former node of the latter node to the copied node (A <- B => A <- A' <- B)
-        nodeMapper.updatePreNodeIdBySelf(createNodeDto.getNewNodeId(), opRo.getNodeId(),
+        baseMapper.updatePreNodeIdBySelf(createNodeDto.getNewNodeId(), opRo.getNodeId(),
             copyNode.getParentId());
         // save node
         String copyNodeId = createChildNode(userId, createNodeDto);
@@ -1152,10 +1221,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 return copyEffect;
             case AUTOMATION:
                 AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().sameSpace(true).overriddenName(name).build();
+                    AutomationCopyOptions.builder().sameSpace(true).removeButtonClickedInput(true)
+                        .overriddenName(name).build();
                 iAutomationRobotService.copy(userId,
                     Collections.singletonList(opRo.getNodeId()),
                     automationCopyOptions, newNodeMap);
+                return copyEffect;
+            case CUSTOM_PAGE:
                 return copyEffect;
             default:
                 break;
@@ -1200,7 +1272,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         log.info("Copy node to space ");
         // No parent node is specified, take the root node as the parent node
         if (StrUtil.isBlank(destParentId)) {
-            destParentId = nodeMapper.selectRootNodeIdBySpaceId(spaceId);
+            destParentId = baseMapper.selectRootNodeIdBySpaceId(spaceId);
         }
         Lock lock = redisLockRegistry.obtain(destParentId);
         try {
@@ -1218,23 +1290,24 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     private String saveDumpedNode(Long userId, String spaceId, String destParentId,
                                   String sourceNodeId, NodeCopyOptions options) {
-        NodeEntity shareNode = nodeMapper.selectByNodeId(sourceNodeId);
+        NodeEntity shareNode = baseMapper.selectByNodeId(sourceNodeId);
         String name = StrUtil.isNotBlank(options.getNodeName())
             ? options.getNodeName() : shareNode.getNodeName();
+        NodeType nodeType = NodeType.toEnum(shareNode.getType());
         String toSaveNodeId = StrUtil.isNotBlank(options.getNodeId())
-            ? options.getNodeId() : IdUtil.createNodeId(shareNode.getType());
+            ? options.getNodeId() : IdUtil.createNodeId(nodeType);
         if (!options.isTemplate()) {
             // check for the same name
-            name = duplicateNameModify(destParentId, shareNode.getType(), name, null);
+            name = duplicateNameModify(destParentId, shareNode.getType(), name, null,
+                NumberUtil.parseLong(options.getUnitId()));
             // update the original first node, and move the position one bit later,
             // that is, the pre-node is the shared node that is transferred.
-            nodeMapper.updatePreNodeIdBySelf(toSaveNodeId, null, destParentId);
+            baseMapper.updatePreNodeIdBySelf(toSaveNodeId, null, destParentId);
         }
 
         // component node id map
-        Map<String, String> newNodeMap = CollUtil.newHashMap();
+        Map<String, String> newNodeMap = new HashMap<>();
         newNodeMap.put(sourceNodeId, toSaveNodeId);
-        NodeType nodeType = NodeType.toEnum(shareNode.getType());
         switch (nodeType) {
             case ROOT:
                 throw new BusinessException(NodeException.NOT_ALLOW);
@@ -1263,15 +1336,18 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 throw new BusinessException(NodeException.SHARE_NODE_STORE_FAIL);
             case AUTOMATION:
                 AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().overriddenName(name).build();
+                    AutomationCopyOptions.builder().removeButtonClickedInput(true)
+                        .overriddenName(name).build();
                 iAutomationRobotService.copy(userId,
                     Collections.singletonList(sourceNodeId),
                     automationCopyOptions, newNodeMap);
+
                 break;
             default:
                 break;
         }
         NodeEntity toSaveNode = new NodeEntity();
+        toSaveNode.setId(IdWorker.getId());
         toSaveNode.setNodeId(toSaveNodeId);
         toSaveNode.setNodeName(name);
         toSaveNode.setCover(shareNode.getCover());
@@ -1280,6 +1356,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         toSaveNode.setType(shareNode.getType());
         toSaveNode.setIcon(shareNode.getIcon());
         toSaveNode.setIsTemplate(options.isTemplate());
+        toSaveNode.setUnitId(NumberUtil.parseLong(options.getUnitId()));
         JSONObject extraObj = JSONUtil.parseObj(shareNode.getExtra());
         if (StrUtil.isNotBlank(options.getSourceTemplateId())) {
             extraObj.set(NodeExtraConstants.SOURCE_TEMPLATE_ID, options.getSourceTemplateId());
@@ -1301,7 +1378,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         toSaveNode.setExtra(JSONUtil.toJsonStr(extraObj));
         toSaveNode.setCreatedBy(userId);
         toSaveNode.setUpdatedBy(userId);
-        this.save(toSaveNode);
+        baseMapper.insert(toSaveNode);
         // description of batch replication nodes
         iNodeDescService.copyBatch(newNodeMap);
         // Batch copy of spatial attachment resources referenced by nodes
@@ -1335,7 +1412,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             originNodeToPreNodeMap.put(sub.getNodeId(), sub.getPreNodeId());
             // Supplement the ID mapping relationship between the original node and the new node
             if (!filterNodeIds.contains(sub.getNodeId())) {
-                newNodeMap.put(sub.getNodeId(), IdUtil.createNodeId(sub.getType()));
+                NodeType nodeType = NodeType.toEnum(sub.getType());
+                newNodeMap.put(sub.getNodeId(), IdUtil.createNodeId(nodeType));
             }
         });
         List<NodeEntity> storeEntities = new ArrayList<>();
@@ -1346,9 +1424,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             NodeEntity node = new NodeEntity();
             node.setId(IdWorker.getId());
             node.setSpaceId(spaceId);
+            node.setUnitId(NumberUtil.parseLong(options.getUnitId()));
             node.setParentId(newNodeMap.get(shareTree.getParentId()));
             node.setNodeId(newNodeMap.get(shareTree.getNodeId()));
             node.setNodeName(shareTree.getNodeName());
+            if (StrUtil.isNotBlank(shareTree.getExtra())) {
+                node.setExtra(shareTree.getExtra());
+            }
             if (shareTree.getPreNodeId() != null) {
                 // The original pre-node ID, if it is in the filter column,
                 // recursively until the transferred node is found or ends in the first place.
@@ -1367,10 +1449,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             node.setUpdatedBy(userId);
             storeEntities.add(node);
         }
-        if (storeEntities.size() == 0) {
+        if (storeEntities.isEmpty()) {
             return;
         }
-        boolean flag = SqlHelper.retBool(nodeMapper.insertBatch(storeEntities));
+        boolean flag = SqlHelper.retBool(baseMapper.insertBatch(storeEntities));
         ExceptionUtil.isTrue(flag, NodeException.SHARE_NODE_STORE_FAIL);
         // Copy datasheet processing
         if (nodeTypeToNodeIdsMap.containsKey(NodeType.DATASHEET.getNodeType())) {
@@ -1388,6 +1470,23 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     });
                 options.setDstPermissionFieldsMap(dstPermissionFieldsMap);
             }
+
+            // Copy automation processing
+            if (nodeTypeToNodeIdsMap.containsKey(NodeType.AUTOMATION.getNodeType())) {
+                List<String> automationNodeIds =
+                    nodeTypeToNodeIdsMap.get(NodeType.AUTOMATION.getNodeType()).stream()
+                        .map(NodeShareTree::getNodeId)
+                        .filter(nodeId -> !filterNodeIds.contains(nodeId))
+                        .collect(Collectors.toList());
+                if (CollUtil.isNotEmpty(automationNodeIds)) {
+                    TriggerCopyResultDto result =
+                        iAutomationRobotService.copy(userId, automationNodeIds,
+                            new AutomationCopyOptions(), newNodeMap);
+                    // use for rewrite button field property
+                    options.setNewTriggerMap(result.getNewTriggerMap());
+                }
+            }
+
             for (NodeShareTree subNode : nodeTypeToNodeIdsMap.get(
                 NodeType.DATASHEET.getNodeType())) {
                 if (filterNodeIds.contains(subNode.getNodeId())) {
@@ -1432,18 +1531,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     ResourceType.MIRROR);
             }
         }
-        // Copy automation processing
-        if (nodeTypeToNodeIdsMap.containsKey(NodeType.AUTOMATION.getNodeType())) {
-            List<String> automationNodeIds =
-                nodeTypeToNodeIdsMap.get(NodeType.AUTOMATION.getNodeType()).stream()
-                    .map(NodeShareTree::getNodeId)
-                    .filter(nodeId -> !filterNodeIds.contains(nodeId))
-                    .collect(Collectors.toList());
-            if (CollUtil.isNotEmpty(automationNodeIds)) {
-                iAutomationRobotService.copy(userId, automationNodeIds,
-                    new AutomationCopyOptions(), newNodeMap);
-            }
-        }
+
     }
 
     /**
@@ -1498,7 +1586,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public void updateNodeBanStatus(String nodeId, Integer status) {
         log.info("Ban or unban nodes ");
-        boolean flag = SqlHelper.retBool(nodeMapper.updateNodeBanStatus(nodeId, status));
+        boolean flag = SqlHelper.retBool(baseMapper.updateNodeBanStatus(nodeId, status));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
     }
 
@@ -1507,8 +1595,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
      */
     @Override
     public String duplicateNameModify(String parentId, int nodeType, String nodeName,
-                                      String nodeId) {
-        List<String> nameList = nodeMapper.selectNameList(parentId, nodeType, nodeId);
+                                      String nodeId, Long unitId) {
+        List<String> nameList = baseMapper.selectNameList(parentId, nodeType, nodeId, unitId);
         int i = 2;
         String name = nodeName;
         while (nameList.contains(name)) {
@@ -1520,7 +1608,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public List<String> checkSubNodePermission(Long memberId, String nodeId, ControlRole role) {
-        boolean hasChildren = nodeMapper.selectHasChildren(nodeId);
+        boolean hasChildren = baseMapper.selectHasChildren(nodeId);
         if (!hasChildren) {
             return null;
         }
@@ -1533,7 +1621,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         List<String> filterNodeIds = roleDict.entrySet().stream()
             .filter(entry -> entry.getValue().isGreaterThanOrEqualTo(role))
-            .map(Map.Entry::getKey).collect(Collectors.toList());
+            .map(Map.Entry::getKey).toList();
         ExceptionUtil.isTrue(subNodeIds.size() == filterNodeIds.size(),
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         return subNodeIds;
@@ -1616,11 +1704,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     JSONUtil.createObj().toString());
                 break;
             case AI_CHAT_BOT:
-                iSpaceService.checkSeatOverLimit(spaceId, 1);
+                iSpaceService.checkChatBotNumsOverLimit(spaceId);
                 aiServiceFacade.createAi(AiCreateParam.builder()
                     .spaceId(spaceId)
                     .aiId(nodeId)
-                    .type(AiType.QA)
                     .aiName(name)
                     .build()
                 );
@@ -1645,7 +1732,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (StrUtil.isBlank(preNodeId)) {
             return null;
         } else {
-            String id = nodeMapper.selectParentIdByNodeId(preNodeId);
+            String id = baseMapper.selectParentIdByNodeId(preNodeId);
             ExceptionUtil.isTrue(parentId.equals(id), PermissionException.NODE_ACCESS_DENIED);
             return preNodeId;
         }
@@ -1688,54 +1775,35 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public String parseExcel(Long userId, String uuid, String spaceId,
-                             Long memberId, String parentNodeId, String viewName, String fileName,
-                             String fileSuffix, InputStream inputStream) {
-        ExcelReader excelReader = null;
+                             Long memberId, String parentNodeId, Long unitId, String viewName,
+                             String fileName, String fileSuffix, InputStream inputStream) {
         MultiSheetReadListener readListener =
             new MultiSheetReadListener(this, userId, uuid, spaceId, memberId,
-                parentNodeId, viewName, fileName);
-        ExcelReaderBuilder readerBuilder;
+                parentNodeId, unitId, viewName, fileName);
         ExcelTypeEnum excelType = FileSuffixConstants.XLS.equals(fileSuffix)
             ? ExcelTypeEnum.XLS : ExcelTypeEnum.XLSX;
-        try {
-            readerBuilder = EasyExcel.read(inputStream)
-                .excelType(excelType)
-                .ignoreEmptyRow(false).autoTrim(false);
-            excelReader = readerBuilder.registerReadListener(readListener).build();
+        ExcelReaderBuilder readerBuilder = EasyExcel.read(inputStream)
+            .excelType(excelType)
+            .ignoreEmptyRow(false).autoTrim(false);
+        try (ExcelReader excelReader = readerBuilder.registerReadListener(readListener).build()) {
             List<ReadSheet> readSheets = excelReader.excelExecutor().sheetList();
             excelReader.read(readSheets);
             return readListener.getRetNodeData().getNodeId();
-        } finally {
-            if (excelReader != null) {
-                // Don't forget to close it here.
-                // Temporary files will be created when reading, and the disk will collapse.
-                excelReader.finish();
-            }
         }
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public String parseCsv(Long userId, String uuid, String spaceId, Long memberId,
-                           String parentNodeId, String viewName, String fileName,
+                           String parentNodeId, Long unitId, String viewName, String fileName,
                            InputStream inputStream) {
-        ExcelReader excelReader = null;
         CsvReadListener readListener =
             new CsvReadListener(this, userId, uuid, spaceId, memberId,
-                parentNodeId, viewName, fileName);
-        try {
-            excelReader = EasyExcel.read(inputStream)
-                .excelType(ExcelTypeEnum.CSV)
-                .registerReadListener(readListener)
-                .build();
+                parentNodeId, unitId, viewName, fileName);
+        try (ExcelReader excelReader = EasyExcel.read(inputStream).excelType(ExcelTypeEnum.CSV)
+            .registerReadListener(readListener).build()) {
             excelReader.readAll();
             return readListener.getRetNodeId();
-        } finally {
-            if (excelReader != null) {
-                // Don't forget to close it here.
-                // Temporary files will be created when reading, and the disk will collapse.
-                excelReader.finish();
-            }
         }
     }
 
@@ -1746,9 +1814,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                                      List<DatasheetMetaEntity> metaEntities,
                                      List<DatasheetRecordEntity> recordEntities) {
 
-        nodeMapper.updatePreNodeIdBySelf(data.getNodeId(), null, data.getParentId());
+        baseMapper.updatePreNodeIdBySelf(data.getNodeId(), null, data.getParentId());
 
-        nodeMapper.insertBatch(nodeEntities);
+        baseMapper.insertBatch(nodeEntities);
 
         iDatasheetService.batchSave(datasheetEntities);
 
@@ -1769,14 +1837,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             spaceId = getSpaceIdByNodeId(nodeId);
         }
         if (StrUtil.isBlank(extras)) {
-            extras = nodeMapper.selectExtraByNodeId(nodeId);
+            extras = baseMapper.selectExtraByNodeId(nodeId);
         }
         NodeExtraDTO nodeExtraDTO = JSONUtil.toBean(extras, NodeExtraDTO.class);
-        SocialConnectInfo connectInfo = socialServiceFacade.getConnectInfo(spaceId);
+        SocialConnectInfo connectInfo = iSpaceService.getSocialConnectInfo(spaceId);
         if (connectInfo != null && connectInfo.getAppId() != null) {
             if (connectInfo.isEnabled()) {
-                String suiteKey =
-                    socialServiceFacade.getSuiteKeyByDingtalkSuiteId(connectInfo.getAppId());
+                String suiteKey = iSpaceService.getSocialSuiteKeyByAppId(connectInfo.getAppId());
                 if (suiteKey != null) {
                     extraVo.setDingTalkSuiteKey(suiteKey);
                     extraVo.setDingTalkDaStatus(nodeExtraDTO.getDingTalkDaStatus());
@@ -1840,7 +1907,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public Optional<String> getNodeName(String nodeId, Long userId) {
         // 1. query the space id and node name of the node
-        UrlNodeInfoDTO urlNodeInfo = nodeMapper.selectSpaceIdAndNodeNameByNodeId(nodeId);
+        UrlNodeInfoDTO urlNodeInfo = baseMapper.selectSpaceIdAndNodeNameByNodeId(nodeId);
 
         if (ObjectUtil.isNull(urlNodeInfo)) {
             return Optional.empty();
@@ -1862,7 +1929,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public void checkEnableOperateNodeBySpaceFeature(Long memberId, String spaceId, String nodeId) {
-        Integer nodeType = nodeMapper.selectNodeTypeByNodeId(nodeId);
+        Integer nodeType = baseMapper.selectNodeTypeByNodeId(nodeId);
         // 1. whether the node is the root node
         if (NodeType.toEnum(nodeType) != NodeType.ROOT) {
             return;
@@ -1888,8 +1955,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public boolean isNodeBelongRootFolder(String spaceId, String nodeId) {
-        String rootNodeId = nodeMapper.selectRootNodeIdBySpaceId(spaceId);
-        String parentNodeId = nodeMapper.selectParentIdByNodeId(nodeId);
+        String rootNodeId = baseMapper.selectRootNodeIdBySpaceId(spaceId);
+        String parentNodeId = baseMapper.selectParentIdByNodeId(nodeId);
         return ObjectUtil.isNotNull(rootNodeId) && rootNodeId.equals(parentNodeId);
     }
 
@@ -1897,7 +1964,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     public List<NodeSearchResult> recentList(String spaceId, Long memberId) {
         List<String> nodeIds =
             multiDatasourceAdapterTemplate.getRecentlyVisitNodeIds(memberId, NodeType.FOLDER);
-        List<NodeInfoVo> nodeInfos = this.getNodeInfoByNodeIds(spaceId, memberId, nodeIds);
+        List<NodeInfoVo> nodeInfos = this.getNodeInfoByNodeIds(spaceId, memberId, nodeIds).stream()
+            .filter(i -> !i.getNodePrivate()).toList();
         return formatNodeSearchResults(nodeInfos);
     }
 
@@ -1912,8 +1980,56 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     @Override
-    public String getNodeIdByParentIdAndNodeName(String parentNodeId, String nodeName) {
-        return baseMapper.selectNodeIdByParentIdAndNodeName(parentNodeId, nodeName);
+    public Optional<NodeEntity> findSameNameInSameLevel(String parentNodeId,
+                                                        String nodeName) {
+        List<NodeEntity> nodeEntities = getSubNodeList(parentNodeId);
+        return nodeEntities.stream()
+            .filter(node -> node.getNodeName().equals(nodeName))
+            .findFirst();
+    }
+
+    @Override
+    public void deleteMembersNodes(List<Long> unitIds) {
+        baseMapper.updateIsDeletedByUnitIds(unitIds, true);
+    }
+
+    @Override
+    public void restoreMembersNodes(List<Long> unitIds) {
+        baseMapper.updateIsDeletedByUnitIds(unitIds, false);
+    }
+
+    @Override
+    public Map<Long, Integer> getCountByUnitIds(List<Long> unitIds) {
+        if (unitIds.isEmpty()) {
+            return new HashMap<>(0);
+        }
+        List<NodeStatisticsDTO> privateNodes = baseMapper.selectCountByUnitIds(unitIds);
+        return privateNodes.stream().collect(
+            Collectors.toMap(NodeStatisticsDTO::getUnitId, NodeStatisticsDTO::getNodeCount));
+    }
+
+    @Override
+    public Long getUnitIdByNodeId(String nodeId) {
+        return baseMapper.selectUnitIdByNodeId(nodeId);
+    }
+
+    @Override
+    public boolean nodePrivate(String nodeId) {
+        Long unitId = getUnitIdByNodeId(nodeId);
+        return !unitId.equals(0L);
+    }
+
+    @Override
+    public boolean privateNodeOperation(Long userId, String nodeId) {
+        Long nodeUnit = getUnitIdByNodeId(nodeId);
+        // not private node
+        if (nodeUnit.equals(0L)) {
+            return true;
+        }
+        // check private user equals
+        Long memberId = getMemberIdByUserIdAndNodeId(userId, nodeId);
+        Long unitId = iUnitService.getUnitIdByRefId(memberId);
+        return nodeUnit.equals(unitId);
     }
 
     private List<NodeSearchResult> formatNodeSearchResults(List<NodeInfoVo> nodeInfoList) {
@@ -1934,6 +2050,31 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             results.add(result);
         });
         return results;
+    }
+
+    private boolean updateExtra(String nodeId, NodeType nodeType, String oldExtra,
+                                Integer showRecordHistory,
+                                NodeEmbedPageRo embedPage) {
+        if (null == showRecordHistory && null == embedPage) {
+            // dont need to update
+            return true;
+        }
+        Dict extra = Dict.create();
+        // Modify whether to display the history of the record
+        if (ObjectUtil.isNotNull(showRecordHistory) && NodeType.DATASHEET.equals(nodeType)) {
+            extra.set(NodeExtraConstants.SHOW_RECORD_HISTORY, showRecordHistory);
+        }
+        // embed page info
+        if (ObjectUtil.isNotNull(embedPage) && NodeType.CUSTOM_PAGE.equals(nodeType)) {
+            extra.set(NodeExtraConstants.EMBED_PAGE, embedPage);
+        }
+        if (null == oldExtra) {
+            return SqlHelper.retBool(
+                baseMapper.insertExtraByNodeId(nodeId, JSONUtil.toJsonStr(extra)));
+        } else {
+            return SqlHelper.retBool(
+                baseMapper.updateExtraByNodeId(nodeId, JSONUtil.toJsonStr(extra)));
+        }
     }
 
 }
